--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ body {
 	--mp-type--scale--300: 0.875rem;
 	--mp-type--scale--400: 1rem;
 	--mp-type--scale--500: 1.25rem;
+	--mp-type--scale--600: 1.5rem;
 
 	background: var(--mp-color-sys--bg);
 	color: var(--mp-color-sys--fg);
@@ -50,6 +51,50 @@ body {
 	height: 1em;
 	width: 1em;
 	vertical-align: -0.125em;
+}
+
+.mp-site-header {
+	margin: 2rem;
+
+	h1 {
+		font-size: var(--mp-type--scale--600);
+	}
+}
+
+.mp-instructions {
+	--mp-instructions--border: 2px dashed var(--mp-color-sys--border);
+	margin-block-start: 1rem;
+	border: var(--mp-instructions--border);
+
+	&:not([open]) {
+		border-block-end: none;
+	}
+
+	> summary {
+		padding: 0.5rem 1rem;
+		border-block-end: var(--mp-instructions--border);
+	}
+}
+
+.mp-instructions__content {
+	padding: 1rem;
+
+	& > *:not(:first-child) {
+		margin-block-start: 0.75rem;
+	}
+
+	& li,
+	p {
+		max-width: 70ch;
+	}
+
+	& li {
+		margin-block-end: 0.5rem;
+
+		& > ul {
+			margin-block-start: 0.5rem;
+		}
+	}
 }
 
 .mp-layout {
@@ -164,7 +209,6 @@ body {
 			var(--mp-grid--column-width)
 		);
 	grid-template-rows: auto repeat(1440, var(--mp-grid--incr-min));
-	/* margin-inline: 2rem; */
 	height: 80vh;
 	overflow: scroll;
 	position: relative;
